# sidquest

./: .gitignore  Cargo.toml  SETUP_UPDATES.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/server/: index.js  manifest.js  remote-entry.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: equality.js  escaping.js  exports.js  index.js  internal.js  shared.js
cleanup-worker/: Cargo.toml
cleanup-worker/src/: main.rs
drizzle/: 0000_fluffy_grandmaster.sql  0001_late_rocket_raccoon.sql  0002_overrated_odin.sql  0003_clammy_dakota_north.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
scripts/: bump-version.js  reset-password.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: cleanup.rs  dictation.rs  export.rs  images.rs  lib.rs  main.rs  worker.rs
src/lib/: wikilinks.ts
src/lib/auth/: authState.svelte.ts  client.ts
src/lib/components/: UpdateNotification.svelte
src/lib/db/: client.ts  schema.ts
src/lib/export/: exportGame.ts  toMarkdown.ts
src/lib/state/: gameState.svelte.ts  modelState.svelte.ts  noteState.svelte.ts  settingsState.svelte.ts  syncState.svelte.ts  uiState.svelte.ts
src/routes/: +layout.svelte  +page.svelte
whisper-worker/: Cargo.toml
whisper-worker/src/: main.rs
(+47 files in other folders)
