[package]
name = "sidquest"
version = "0.1.0"
description = "Game companion note-taking app"
authors = ["you"]
edition = "2021"

[lib]
name = "sidquest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["fs", "io-util"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
